<resources>
    <string name="app_name">MyCrypto_Account</string>
    <string name="coin_name">Ethereum</string>
    <string name="coin_symbol">ETH</string>
    <string name="coin_price">$250.00</string>
    <string name="coin_price_ph">+2.5%</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_favourite">Add To Favourite</string>
</resources>
