<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="CryptoCoin"
            type="com.polish.mycrypto_account.model.CryptoCoin" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
            android:layout_height="wrap_content"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".ui.CryptoCoinDetails"
            android:background="@color/colorPrimary"
            android:padding="16dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:weightSum="5">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bg_detailed_coin2"
                    android:layout_weight="2">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:cardCornerRadius="50dp"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <TextView
                                    android:id="@+id/coin_symbol_detailId"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@{CryptoCoin.symbol}"
                                    tools:text="@string/coin_symbol"
                                    android:textSize="18sp"
                                    android:fontFamily="@font/aclonica"
                                    android:layout_centerInParent="true" />

                            </RelativeLayout>


                        </androidx.cardview.widget.CardView>

                    </RelativeLayout>


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/coin_name_detailedId"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{CryptoCoin.name}"
                        tools:text="@string/coin_name"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/carter_one"
                        android:textColor="#ffffff"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/coin_price_detailedId"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{"$"+CryptoCoin.priceUsd}'
                        tools:text="@string/coin_price"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/gorditas"
                        android:textColor="#ffffff"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/coin_price_perHour_detailedId"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{CryptoCoin.percentChange1h+"%"}'
                        tools:text="@string/coin_price_ph"
                        android:fontFamily="@font/carme"
                        android:textColor="#ffffff"
                        android:textSize="24sp"
                        android:layout_gravity="center_horizontal" />


                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                   android:layout_weight="1">

                    <Button
                        android:id="@+id/add_favouriteId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_favourite"
                        android:fontFamily="@font/aclonica"
                        android:background="@drawable/bg_detailed_coin"
                        android:textSize="18sp"/>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</layout>