<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="CryptoCoin"
            type="com.polish.mycrypto_account.model.CryptoCoin" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="25dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/bg_coin">


                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="20dp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:cardCornerRadius="50dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/coin_symbol"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:fontFamily="@font/aclonica"
                                android:text="@string/coin_symbol"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </RelativeLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/coin_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/carter_one"
                            android:text="@string/coin_name"
                            android:textColor="#ffffff"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/coin_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="0dp"
                            android:fontFamily="@font/gorditas"
                            android:text="@string/coin_price"
                            android:textColor="#ffffff"
                            android:textSize="18sp" />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/coin_price_perHour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="50dp"
                            android:layout_marginEnd="8dp"
                            android:fontFamily="@font/carme"
                            android:text="@string/coin_price_ph"
                            android:textColor="#ffffff"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </RelativeLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>